# Basic-Math-Test-Generator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
Math-Test/: answers.txt  questions.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  less_allowed_operations.rs
src/: main.rs  math_problem.rs  math_test.rs  utils_lib.rs
